Fixed CSS issue with dialog and z-index

--- a/src/components/dialog/dialog.scss
+++ b/src/components/dialog/dialog.scss
@@ -12,7 +12,7 @@ $dialog-padding: $baseline-grid * 3;
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: $z-index-dialog;
+  z-index: $z-index-menu;
   overflow: hidden;
 }
 
